# shmtu-cas-ocr-server

./: .gitignore  CMakeLists.txt  README.md  shmtu-cas-ocr-server.sln
shmtu-cas-ocr-server/: .gitignore  Build.md  CAS_OCR.cpp  CAS_OCR.h  CMakeLists.txt  Conan.md  README.md  app_win32.rc  conanfile.txt  main.cpp  shmtu-cas-ocr-server.vcxproj  shmtu-cas-ocr-server.vcxproj.filters
